@@ -1,0 +1,11 @@
+/*
+ * Copyright (c) 2000-2006 UnixLib Developers
+ */
+
+#ifndef __VARARGS_H
+#define __VARARGS_H
+
+#error "<varargs.h> is obsolete"
+#error "Revise your code to use <stdarg.h>"
+
+#endif
